Product page table spacing correct.

--- a/dcs-dropship.css
+++ b/dcs-dropship.css
@@ -7,8 +7,8 @@ td.dcs_dropship_product
 	padding: 3px;
 	margin: 3px;
 	vertical-align: top;
-	min-width: 50px;
-	min-height: 100px;
+	//min-width: 50px;
+	//min-height: 100px;
 }
 
 div.dcs_dropship_product
